<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DFD6"
    tools:context=".Fragments.StatsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="68dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="377dp"
        android:fontFamily="@font/apex"
        android:text="@string/stats"
        android:textAlignment="center"
        android:textColor="#B93038"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="83dp"
        android:autofillHints="username"
        android:ems="10"
        android:fontFamily="@font/apex"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:shadowColor="#FF0000"
        android:textColorHighlight="@color/apex_red"
        android:textColorLink="@color/apex_red2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="328dp"
        android:backgroundTint="#B93038"
        android:fontFamily="@font/apex"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_playerName" />
</androidx.constraintlayout.widget.ConstraintLayout>